--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,20 @@ layout: default
   <header class="post-header">
     <h1 class="post-title p-name" itemprop="name headline" style="text-align: center;">{{ page.date | date: "%Y년 %-m월
       %-d일" }} {{ page.title | escape }}</h1>
+    
+    
+    {%- if page.bonstetten -%}
+     
+    <h2 style="text-align: right;"><a href="https://www.kath-bonstetten.ch/">본슈테텐 성당 (독일어)</a></h2>
+
+    {%- endif -%}
+    
+    {%- if not page.bonstetten -%}
+     
     <h2 style="text-align: right;">취리히 한인 공동체 천주교회</h2>
+
+    {%- endif -%}
+     
     <h2 style="text-align: right;">이영덕 안토니오 신부님</h2>
     {%- if page.first_reading -%}
     <h3 style="text-align: right;">제 1 독서 > <a href="{{ page.first_reading_link | escape }}">{{ page.first_reading |
