--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,7 +14,7 @@ layout: default
 
     {%- endif -%}
     
-    {%- if not page.bonstetten -%}
+    {%- if !page.bonstetten -%}
      
     <h2 style="text-align: right;">취리히 한인 공동체 천주교회</h2>
 
