--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,11 +33,18 @@ layout: default
     <h3 style="text-align: right;">복음 > <a href="{{ page.gospel_link | escape }}">{{ page.gospel | escape }}</a></h3>
     {%- endif -%}
     <!-- Multiple ways to access 매일미사 https://maria.catholic.or.kr/mi_pr/missa/missa.asp?gomonth={{ page.date | date: '%Y-%m-%d' }} -->
+
+    {%- if page.homily -%}
+    
+     
+    
     <h3 style="text-align: right;">매일미사 > <a
         href="https://maria.catholic.or.kr/mi_pr/missa/ordinary.asp?day={{ page.date | date: '%Y%m%d' }}&missaid=13766#missa_02">읽기</a>
       &
       <a href="https://maria.catholic.or.kr/mi_pr/missa/missa.asp?gomonth={{ page.date | date: '%Y-%m-%d' }}">듣기</a>
     </h3>
+    
+     {%- endif -%}
     {%- if page.image -%}
     <p style="text-align:center;">
       <img src="https://kkgs-ch.github.io/homily/assets/images/{{ page.image | escape }}">
@@ -51,7 +58,13 @@ layout: default
       <p>[인사말씀]
       <p> {{ page.opening | escape }} </p>
       {%- endif -%}
-      [강론말씀] <p> {{ content }}
+      
+      {%- if page.homily -%}
+      [강론말씀] 
+      {%- endif -%}
+      
+      
+      <p> {{ content }}
         {%- if page.closing -%}
       <p>[첨언]
       <p> {{ page.closing | escape }}</p>
