--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,11 +14,11 @@ layout: default
 
     {%- endif -%}
     
-    {%- if !page.bonstetten -%}
+   
      
     <h2 style="text-align: right;">취리히 한인 공동체 천주교회</h2>
 
-    {%- endif -%}
+  
      
     <h2 style="text-align: right;">이영덕 안토니오 신부님</h2>
     {%- if page.first_reading -%}
@@ -34,7 +34,7 @@ layout: default
     {%- endif -%}
     <!-- Multiple ways to access 매일미사 https://maria.catholic.or.kr/mi_pr/missa/missa.asp?gomonth={{ page.date | date: '%Y-%m-%d' }} -->
 
-    {%- if page.not_homily -%}
+  
     
      
     
@@ -43,8 +43,7 @@ layout: default
       &
       <a href="https://maria.catholic.or.kr/mi_pr/missa/missa.asp?gomonth={{ page.date | date: '%Y-%m-%d' }}">듣기</a>
     </h3>
-    
-     {%- endif -%}
+     
     {%- if page.image -%}
     <p style="text-align:center;">
       <img src="https://kkgs-ch.github.io/homily/assets/images/{{ page.image | escape }}">
@@ -59,7 +58,7 @@ layout: default
       <p> {{ page.opening | escape }} </p>
       {%- endif -%}
       
-      {%- if page.not_homily -%}
+      {%- if page.opening -%}
       [강론말씀] 
       {%- endif -%}
       
