--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,7 +16,7 @@ layout: default
     
    
      
-    <h2 style="text-align: right;">취리히 한인 공동체 천주교회</h2>
+    <h2 style="text-align: right;"> <a href="https://kkgs.ch">취리히 한인 공동체 천주교회</a></h2>
 
   
      
