파스카 성야 링크 고침

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -43,10 +43,21 @@ layout: default
     
      
     
-    <h3 style="text-align: right;">매일미사 > <a
-        href="https://maria.catholic.or.kr/mi_pr/missa/ordinary.asp?day={{ page.date | date: '%Y%m%d' }}&missaid=13766#missa_02">읽기</a>
+    <h3 style="text-align: right;">매일미사 > 
+      {%- if page.daily_read -%}
+      <a
+      href="{{ page.daily_read | escape }}">읽기</a>
+      {%- else -%}
+      <a
+      href="https://maria.catholic.or.kr/mi_pr/missa/ordinary.asp?day={{ page.date | date: '%Y%m%d' }}&missaid=13766#missa_02">읽기</a>
+      {%- endif -%}
       &
+      {%- if page.daily_listen -%}
+      <a
+      href="{{ page.daily_listen | escape }}">듣기</a>
+      {%- else -%}
       <a href="https://maria.catholic.or.kr/mi_pr/missa/missa.asp?gomonth={{ page.date | date: '%Y-%m-%d' }}">듣기</a>
+      {%- endif -%}
     </h3>
      
     {%- if page.image -%}
