file move to sub directories

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -319,7 +319,7 @@
     div {
       display: block;
       padding: $spacing-unit / 4;
-      border: 1px solid transparent;
+      border: 1px solid trans_posts/2023;
 
       &.pager-edge {
         color: $border-color-01;
