--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,7 +9,7 @@ layout: archive
     {% assign postsInYear = site.posts | group_by_exp: 'post', 'post.date | date: "%Y"' %}
     {% for year in postsInYear %}
     <li>
-        <a href="#{{ year.name }}">
+        <a href="#{{ year.name }}_anchor">
             <strong>{{ year.name }}년</strong>에 강론말씀을 <span class="taxonomy__count">{{ year.items | size }}번
                 기록하였습니다.</span>
         </a>
@@ -25,7 +25,8 @@ layout: archive
         {% include archive-single.html type=page.entries_layout %}
         {% endfor %}
     </div>
-    <div style="text-align: right;">
+
+    <div style="text-align: right;" id="{{ year.name }}_anchor">
         <a href="#page-title" class="back-to-top">&uarr; &uarr; &uarr; {{ site.data.ui-text[site.locale].back_to_top |
             default: '맨 위로 가서 다른 연도 선택
             하기' }}
