--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,22 +20,22 @@ layout: default
      
     <h2 style="text-align: right;">이영덕 안토니오 신부님</h2>
     {%- if page.first_reading -%}
-    <h3 style="text-align: right;">제 1 독서 > <a href="{{ page.first_reading_link | escape }}">{{ page.first_reading |
+    <h3 style="text-align: right;">제 1 독서 > <a href="https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?{{ page.first_reading_link | escape }}">{{ page.first_reading |
         escape }}</a></h3>
     {%- endif -%}
     {%- if page.second_reading -%}
-    <h3 style="text-align: right;">제 2 독서 > <a href="{{ page.second_reading_link | escape }}">{{ page.second_reading |
+    <h3 style="text-align: right;">제 2 독서 > <a href="https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?{{ page.second_reading_link | escape }}">{{ page.second_reading |
         escape }}</a></h3>
     {%- endif -%}
     {%- if page.third_reading -%}
-    <h3 style="text-align: right;">제 3 독서 > <a href="{{ page.third_reading_link | escape }}">{{ page.third_reading |
+    <h3 style="text-align: right;">제 3 독서 > <a href="https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?{{ page.third_reading_link | escape }}">{{ page.third_reading |
         escape }}</a></h3>
     {%- endif -%}
     {%- if page.epistle -%}
-    <h3 style="text-align: right;">서간 > <a href="{{ page.epistle_link | escape }}">{{ page.epistle | escape }}</a></h3>
+    <h3 style="text-align: right;">서간 > <a href="https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?{{ page.epistle_link | escape }}">{{ page.epistle | escape }}</a></h3>
     {%- endif -%}
     {%- if page.gospel -%}
-    <h3 style="text-align: right;">복음 > <a href="{{ page.gospel_link | escape }}">{{ page.gospel | escape }}</a></h3>
+    <h3 style="text-align: right;">복음 > <a href="https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?{{ page.gospel_link | escape }}">{{ page.gospel | escape }}</a></h3>
     {%- endif -%}
     <!-- Multiple ways to access 매일미사 https://maria.catholic.or.kr/mi_pr/missa/missa.asp?gomonth={{ page.date | date: '%Y-%m-%d' }} -->
 
