--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,11 +20,11 @@ layout: default
      
     <h2 style="text-align: right;">이영덕 안토니오 신부님</h2>
     {%- if page.first_reading -%}
-    <h3 style="text-align: right;">제1독서 > <a href="https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?{{ page.first_reading_link | escape }}">{{ page.first_reading |
+    <h3 style="text-align: right;"><a href="https://maria.catholic.or.kr/dictionary/term/term_view.asp?ctxtIdNum=8233&keyword=%EB%8F%85%EC%84%9C&gubun=04#">제1독서</a> > <a href="https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?{{ page.first_reading_link | escape }}">{{ page.first_reading |
         escape }}</a></h3>
     {%- endif -%}
     {%- if page.second_reading -%}
-    <h3 style="text-align: right;">제2독서 > <a href="https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?{{ page.second_reading_link | escape }}">{{ page.second_reading |
+    <h3 style="text-align: right;"><a href="https://maria.catholic.or.kr/dictionary/term/term_view.asp?ctxtIdNum=8235&keyword=%EC%A0%9C2%EB%8F%85%EC%84%9C&gubun=04">제2독서</a> > <a href="https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?{{ page.second_reading_link | escape }}">{{ page.second_reading |
         escape }}</a></h3>
     {%- endif -%}
     {%- if page.third_reading -%}
@@ -32,10 +32,10 @@ layout: default
         escape }}</a></h3>
     {%- endif -%}
     {%- if page.epistle -%}
-    <h3 style="text-align: right;">서간 > <a href="https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?{{ page.epistle_link | escape }}">{{ page.epistle | escape }}</a></h3>
+    <h3 style="text-align: right;"><a href="https://maria.catholic.or.kr/dictionary/term/term_view.asp?ctxtIdNum=7404&keyword=%EC%84%9C%EA%B0%84&gubun=04">서간</a> > <a href="https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?{{ page.epistle_link | escape }}">{{ page.epistle | escape }}</a></h3>
     {%- endif -%}
     {%- if page.gospel -%}
-    <h3 style="text-align: right;">복음 > <a href="https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?{{ page.gospel_link | escape }}">{{ page.gospel | escape }}</a></h3>
+    <h3 style="text-align: right;"><a href="https://maria.catholic.or.kr/dictionary/term/term_view.asp?ctxtIdNum=1218&keyword=%EB%B3%B5%EC%9D%8C&gubun=01">복음</a> > <a href="https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?{{ page.gospel_link | escape }}">{{ page.gospel | escape }}</a></h3>
     {%- endif -%}
     <!-- Multiple ways to access 매일미사 https://maria.catholic.or.kr/mi_pr/missa/missa.asp?gomonth={{ page.date | date: '%Y-%m-%d' }} -->
 
