--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@ layout: default
       %-d일" }} {{ page.title | escape }}</h1>
     
     {%- if page.bonstetten -%}
-    <h2 style="text-align: right;"><a href="https://www.kath-bonstetten.ch/">Pfarrei St. Mauritius Bonstetten, Stallikon, Wettswil</a></h2>
+    <h2 style="text-align: right;"><a href="https://www.kath-bonstetten.ch/">본슈테텐 성당</a></h2>
     {%- else -%}
     <h2 style="text-align: right;"> <a href="https://kkgs.ch">취리히 한인 공동체 천주교회</a></h2>
     {%- endif -%}
