--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,7 +21,7 @@ layout: default
     <h2 style="text-align: right;">이영덕 안토니오 신부님</h2>
     {%- if page.first_reading -%}
     <h3 style="text-align: right;"><a href="https://maria.catholic.or.kr/dictionary/term/term_view.asp?ctxtIdNum=8233&keyword=%EB%8F%85%EC%84%9C&gubun=04#">제1독서</a> > <a href="https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?{{ page.first_reading_link | escape }}">{{ page.first_reading |
-        escape }}</a>  <a href="https://bible.cbck.or.kr/Nab/{{ page.first_reading_link_cbck | escape }}">영</a> <a href="https://www.bibleserver.com/EU/{{ page.first_reading_link_de | escape }}">독</a>  <a href="https://bible.cbck.or.kr/Vulgata/{{ page.first_reading_link_cbck | escape }}">라틴어</a>   </h3>
+        escape }}</a>  <a href="https://bible.cbck.or.kr/Nab/{{ page.first_reading_link_cbck | escape }}">🇺🇸</a> <a href="https://www.bibleserver.com/EU/{{ page.first_reading_link_de | escape }}">🇩🇪</a>  <a href="https://bible.cbck.or.kr/Vulgata/{{ page.first_reading_link_cbck | escape }}">🇻🇦</a>   </h3>
     {%- endif -%}
     {%- if page.second_reading -%}
     <h3 style="text-align: right;"><a href="https://maria.catholic.or.kr/dictionary/term/term_view.asp?ctxtIdNum=8235&keyword=%EC%A0%9C2%EB%8F%85%EC%84%9C&gubun=04">제2독서</a> > <a href="https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?{{ page.second_reading_link | escape }}">{{ page.second_reading |
@@ -29,7 +29,7 @@ layout: default
     {%- endif -%}
     {%- if page.third_reading -%}
     <h3 style="text-align: right;">제3독서 > <a href="https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?{{ page.third_reading_link | escape }}">{{ page.third_reading |
-        escape }}</a>   <a href="https://bible.cbck.or.kr/Nab/{{ page.third_reading_link_cbck | escape }}">영</a> <a href="https://www.bibleserver.com/EU/{{ page.third_reading_link_de | escape }}">독</a> <a href="https://bible.cbck.or.kr/Vulgata/{{ page.third_reading_link_cbck | escape }}">라틴어</a> </h3>
+        escape }}</a>   <a href="https://bible.cbck.or.kr/Nab/{{ page.third_reading_link_cbck | escape }}">Eng</a> <a href="https://www.bibleserver.com/EU/{{ page.third_reading_link_de | escape }}">Deu</a> <a href="https://bible.cbck.or.kr/Vulgata/{{ page.third_reading_link_cbck | escape }}">Vul</a> </h3>
     {%- endif -%}
     {%- if page.epistle -%}
     <h3 style="text-align: right;"><a href="https://maria.catholic.or.kr/dictionary/term/term_view.asp?ctxtIdNum=7404&keyword=%EC%84%9C%EA%B0%84&gubun=04">서간</a> > <a href="https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?{{ page.epistle_link | escape }}">{{ page.epistle | escape }}</a>   <a href="https://bible.cbck.or.kr/Nab/{{ page.epistle_link_cbck | escape }}">영</a> <a href="https://www.bibleserver.com/EU/{{ page.epistle_link_de | escape }}">독</a> <a href="https://bible.cbck.or.kr/Vulgata/{{ page.epistle_link_cbck | escape }}">라틴어</a> </h3>
