--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,8 +20,8 @@ layout: default
      
     <h2 style="text-align: right;">이영덕 안토니오 신부님</h2>
     {%- if page.first_reading -%}
-    <h3 style="text-align: right;"><a href="https://maria.catholic.or.kr/dictionary/term/term_view.asp?ctxtIdNum=8233&keyword=%EB%8F%85%EC%84%9C&gubun=04#">제1독서</a> > <a href="https://bible.cbck.or.kr/Knb/{{ page.first_reading_link_cbck | escape }}">🇻🇦</a>  <a href="https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?{{ page.first_reading_link | escape }}">{{ page.first_reading |
-        escape }}</a>     </h3>
+    <h3 style="text-align: right;"><a href="https://maria.catholic.or.kr/dictionary/term/term_view.asp?ctxtIdNum=8233&keyword=%EB%8F%85%EC%84%9C&gubun=04#">제1독서</a> > <a href="https://bible.cbck.or.kr/Knb/{{ page.first_reading_link_cbck | escape }}">{{ page.first_reading |
+      escape }}</a>  <a href="https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?{{ page.first_reading_link | escape }}">듣기</a></h3>
     {%- endif -%}
     {%- if page.second_reading -%}
     <h3 style="text-align: right;"><a href="https://maria.catholic.or.kr/dictionary/term/term_view.asp?ctxtIdNum=8235&keyword=%EC%A0%9C2%EB%8F%85%EC%84%9C&gubun=04">제2독서</a> > <a href="https://bible.cbck.or.kr/Knb/{{ page.second_reading_link_cbck | escape }}">{{ page.second_reading |
