--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,62 +6,71 @@ layout: default
   <header class="post-header">
     <h1 class="post-title p-name" itemprop="name headline" style="text-align: center;">{{ page.date | date: "%Y년 %-m월
       %-d일" }} {{ page.title | escape }}</h1>
-    
+
     {%- if page.bonstetten -%}
     <h2 style="text-align: right;"><a href="https://www.kath-bonstetten.ch/">본슈테텐 성당</a></h2>
     {%- else -%}
     <h2 style="text-align: right;"> <a href="https://kkgs.ch">취리히 한인 공동체 천주교회</a></h2>
     {%- endif -%}
-    
-   
-     
 
-  
-     
+
+
+
+
+
     <h2 style="text-align: right;">이영덕 안토니오 신부님</h2>
     {%- if page.first_reading -%}
-    <h3 style="text-align: right;"><a href="https://maria.catholic.or.kr/dictionary/term/term_view.asp?ctxtIdNum=8233&keyword=%EB%8F%85%EC%84%9C&gubun=04#">제1독서</a> > <a href="https://bible.cbck.or.kr/Knb/{{ page.first_reading_link_cbck | escape }}">{{ page.first_reading |
-      escape }}</a>   </h3>
+    <h3 style="text-align: right;"><a
+        href="https://maria.catholic.or.kr/dictionary/term/term_view.asp?ctxtIdNum=8233&keyword=%EB%8F%85%EC%84%9C&gubun=04#">제1독서</a>
+      > <a href="https://bible.cbck.or.kr/Knb/{{ page.first_reading_link | escape }}">{{ page.first_reading |
+        escape }}</a> </h3>
     {%- endif -%}
     {%- if page.second_reading -%}
-    <h3 style="text-align: right;"><a href="https://maria.catholic.or.kr/dictionary/term/term_view.asp?ctxtIdNum=8235&keyword=%EC%A0%9C2%EB%8F%85%EC%84%9C&gubun=04">제2독서</a> > <a href="https://bible.cbck.or.kr/Knb/{{ page.second_reading_link_cbck | escape }}">{{ page.second_reading |
-      escape }}</a>    </h3>
+    <h3 style="text-align: right;"><a
+        href="https://maria.catholic.or.kr/dictionary/term/term_view.asp?ctxtIdNum=8235&keyword=%EC%A0%9C2%EB%8F%85%EC%84%9C&gubun=04">제2독서</a>
+      > <a href="https://bible.cbck.or.kr/Knb/{{ page.second_reading_link | escape }}">{{ page.second_reading |
+        escape }}</a> </h3>
     {%- endif -%}
     {%- if page.third_reading -%}
-    <h3 style="text-align: right;">제3독서 > <a href="https://bible.cbck.or.kr/Knb/{{ page.third_reading_link_cbck | escape }}">{{ page.third_reading |
-      escape }}</a>    </h3>
+    <h3 style="text-align: right;">제3독서 > <a
+        href="https://bible.cbck.or.kr/Knb/{{ page.third_reading_link | escape }}">{{ page.third_reading |
+        escape }}</a> </h3>
     {%- endif -%}
     {%- if page.epistle -%}
-    <h3 style="text-align: right;"><a href="https://maria.catholic.or.kr/dictionary/term/term_view.asp?ctxtIdNum=7404&keyword=%EC%84%9C%EA%B0%84&gubun=04">서간</a> > <a href="https://bible.cbck.or.kr/Knb/{{ page.epistle_link_cbck | escape }}">{{ page.epistle | escape }}</a>     </h3>
+    <h3 style="text-align: right;"><a
+        href="https://maria.catholic.or.kr/dictionary/term/term_view.asp?ctxtIdNum=7404&keyword=%EC%84%9C%EA%B0%84&gubun=04">서간</a>
+      > <a href="https://bible.cbck.or.kr/Knb/{{ page.epistle_link | escape }}">{{ page.epistle | escape }}</a> </h3>
     {%- endif -%}
     {%- if page.gospel -%}
-    <h3 style="text-align: right;"><a href="https://maria.catholic.or.kr/dictionary/term/term_view.asp?ctxtIdNum=1218&keyword=%EB%B3%B5%EC%9D%8C&gubun=01">복음</a> > <a href="https://bible.cbck.or.kr/Knb/{{ page.gospel_link_cbck | escape }}">{{ page.gospel | escape }}</a> </h3>
-    {%- endif -%} 
+    <h3 style="text-align: right;"><a
+        href="https://maria.catholic.or.kr/dictionary/term/term_view.asp?ctxtIdNum=1218&keyword=%EB%B3%B5%EC%9D%8C&gubun=01">복음</a>
+      > <a href="https://bible.cbck.or.kr/Knb/{{ page.gospel_link | escape }}">{{ page.gospel | escape }}</a> </h3>
+    {%- endif -%}
 
-  
-    
-    {%- if page.not_homily -%} 
+
+
+    {%- if page.not_homily -%}
 
     {%- else -%}
-      <h3 style="text-align: right;">
-        {%- if page.daily_missa -%}
-        <a href="https://missa.cbck.or.kr/DailyMissa/{{ page.daily_missa | escape }}">
-          {%- else -%}
-          <a href="https://missa.cbck.or.kr/DailyMissa/{{ page.date | date: '%Y%m%d' }}">
+    <h3 style="text-align: right;">
+      {%- if page.daily_missa -%}
+      <a href="https://missa.cbck.or.kr/DailyMissa/{{ page.daily_missa | escape }}">
+        {%- else -%}
+        <a href="https://missa.cbck.or.kr/DailyMissa/{{ page.date | date: '%Y%m%d' }}">
           {%- endif -%}
-          매일미사</a>  
-      </h3>
+          매일미사</a>
+    </h3>
 
     {%- endif -%}
-    
-     
+
+
     {%- if page.image -%}
     <p style="text-align:center;">
       <img src="https://kkgs-ch.github.io/homily/assets/images/{{ page.image | escape }}">
     </p>
     {%- endif -%}
   </header>
- 
+
 
   <div class="post-content e-content" itemprop="articleBody">
     <h4>
@@ -69,12 +78,12 @@ layout: default
       <p>[인사말씀]
       <p> {{ page.opening | escape }} </p>
       {%- endif -%}
-      
+
       {%- if page.opening -%}
-      [강론말씀] 
+      [강론말씀]
       {%- endif -%}
-      
-      
+
+
       <p> {{ content }}
         {%- if page.closing -%}
       <p>[첨언]
